--- a/exception-logger/packages.config
+++ b/exception-logger/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net40" />
   <package id="fszmq" version="12.1.0" targetFramework="net40" />
-  <package id="ServiceStack.Text" version="3.9.71" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
   <package id="ZeroMQ" version="4.1.0.17" targetFramework="net40" />
 </packages>
