--- a/exception-logger/exception-logger.fsproj
+++ b/exception-logger/exception-logger.fsproj
@@ -19,41 +19,55 @@
     <ErrorReport>prompt</ErrorReport>
     <Externalconsole>true</Externalconsole>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="ZeroMQ">
-      <HintPath>..\packages\ZeroMQ.4.1.0.17\lib\net40\ZeroMQ.dll</HintPath>
-    </Reference>
-    <Reference Include="FSharp.Core">
-      <HintPath>..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="fszmq">
-      <HintPath>..\packages\fszmq.12.1.0\lib\net40\fszmq.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
     <Compile Include="Messages.fs" />
     <Compile Include="MessageHandlers.fs" />
     <Compile Include="MessageHandling.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Program.fs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
-  <ItemGroup>
-    <None Include="i386\libsodium.dll" />
-    <None Include="i386\libsodium.so" />
-    <None Include="i386\libzmq.dll" />
-    <None Include="i386\libzmq.so" />
-    <None Include="amd64\libsodium.dll" />
-    <None Include="amd64\libsodium.so" />
-    <None Include="amd64\libzmq.dll" />
-    <None Include="amd64\libzmq.so" />
     <None Include="packages.config" />
+    <None Include="app.config" />
+    <None Include="i386\libzmq.so" />
+    <None Include="i386\libzmq.dll" />
+    <None Include="i386\libsodium.so" />
+    <None Include="i386\libsodium.dll" />
+    <None Include="amd64\libzmq.so" />
+    <None Include="amd64\libzmq.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="amd64\libsodium.so" />
+    <None Include="amd64\libsodium.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="mscorlib" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="FSharp.Core">
+      <HintPath>..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="fszmq">
+      <HintPath>..\packages\fszmq.12.1.0\lib\net40\fszmq.dll</HintPath>
+    </Reference>
+    <Reference Include="ZeroMQ">
+      <HintPath>..\packages\ZeroMQ.4.1.0.17\lib\net40\ZeroMQ.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+  </ItemGroup>
+  <PropertyGroup>
+    <PreBuildEvent />
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
