first go at client library

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="../exception-logger/packages.config" />
   <repository path="..\exception-logger\packages.config" />
+  <repository path="..\ExLog.Client\packages.config" />
 </repositories>
