--- a/exception-logger/ExLog.fsproj
+++ b/exception-logger/ExLog.fsproj
@@ -2,58 +2,71 @@
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8422732F-BC1A-46E0-857E-A4238EB5F61B}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>ExLog.Client</RootNamespace>
-    <AssemblyName>ExLog.Client</AssemblyName>
+    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <ProjectGuid>{54D24F6B-3631-47CF-8ECB-0EF417DD026E}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>exceptionlogger</RootNamespace>
+    <AssemblyName>exception-logger</AssemblyName>
+    <Name>ExLog</Name>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug</OutputPath>
     <ErrorReport>prompt</ErrorReport>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
+    <Compile Include="Messages.fs" />
+    <Compile Include="MessageHandlers.fs" />
+    <Compile Include="MessageHandling.fs" />
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Sender.fs" />
+    <Compile Include="Program.fs" />
+    <None Include="packages.config" />
+    <None Include="app.config" />
     <None Include="i386\libzmq.so" />
     <None Include="i386\libzmq.dll" />
     <None Include="i386\libsodium.so" />
     <None Include="i386\libsodium.dll" />
     <None Include="amd64\libzmq.so" />
-    <None Include="amd64\libzmq.dll" />
+    <None Include="amd64\libzmq.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="amd64\libsodium.so" />
     <None Include="amd64\libsodium.dll" />
-    <None Include="packages.config" />
-    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Core">
-      <HintPath>..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="fszmq">
-      <HintPath>..\packages\fszmq.12.1.0\lib\net40\fszmq.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="FSharp.Core">
+      <HintPath>..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="fszmq">
+      <HintPath>..\packages\fszmq.12.1.0\lib\net40\fszmq.dll</HintPath>
+    </Reference>
     <Reference Include="ZeroMQ">
       <HintPath>..\packages\ZeroMQ.4.1.0.17\lib\net40\ZeroMQ.dll</HintPath>
-      <Private>True</Private>
     </Reference>
   </ItemGroup>
+  <PropertyGroup>
+    <PreBuildEvent />
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
